{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 194,
  "lineage": "dad9240b-3e4d-8972-0f3d-e731772242f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:security-group/sg-0d19db851bef21c0c",
            "description": "ghost-dev-app-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d19db851bef21c0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ghost-dev-app-sg",
            "name_prefix": "",
            "owner_id": "238086487912",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b010bc1c902e8b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_eip.nat_custom",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.custom",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.default",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.default_inbound",
            "module.vpc.aws_network_acl_rule.default_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.add_private",
            "module.vpc.aws_subnet.add_public",
            "module.vpc.aws_subnet.nat_public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_nat_gateway.custom",
            "module.vpc.data.aws_subnet.add_private",
            "module.vpc.data.aws_subnet.add_public",
            "module.vpc.data.aws_subnet.nat_public",
            "module.vpc.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.app_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ba7951dcbf97905",
            "association_id": "eipassoc-0f5d60eb7431b7501",
            "domain": "vpc",
            "id": "eipalloc-04ba7951dcbf97905",
            "instance": "i-0a92a9ca16cd77227",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0065f95e30f348239",
            "private_dns": "ip-172-32-0-123.ec2.internal",
            "private_ip": "172.32.0.123",
            "public_dns": "ec2-18-235-28-197.compute-1.amazonaws.com",
            "public_ip": "18.235.28.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ghost-dev",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "ghost-dev",
              "environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.app_server",
            "data.local_file.ssh_public_key",
            "module.app_server.aws_iam_instance_profile.ec2",
            "module.app_server.aws_iam_role.ec2",
            "module.app_server.aws_instance.default",
            "module.app_server.aws_secretsmanager_secret.dbroot",
            "module.app_server.aws_secretsmanager_secret.dbuser",
            "module.app_server.aws_secretsmanager_secret_version.dbroot_ver",
            "module.app_server.aws_secretsmanager_secret_version.dbuser_ver",
            "module.app_server.data.aws_ami.ubuntu",
            "module.app_server.data.aws_iam_policy_document.ec2_assume_role_policy_document",
            "module.app_server.random_id.root_password",
            "module.app_server.random_id.user_password",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_eip.nat_custom",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.custom",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.default",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.default_inbound",
            "module.vpc.aws_network_acl_rule.default_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.add_private",
            "module.vpc.aws_subnet.add_public",
            "module.vpc.aws_subnet.nat_public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_nat_gateway.custom",
            "module.vpc.data.aws_subnet.add_private",
            "module.vpc.data.aws_subnet.add_public",
            "module.vpc.data.aws_subnet.nat_public",
            "module.vpc.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.app_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b996646377b6619",
            "arn": "arn:aws:ec2:us-east-1:238086487912:instance/i-0a92a9ca16cd77227",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app_server_role",
            "id": "i-0a92a9ca16cd77227",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0065f95e30f348239",
            "private_dns": "ip-172-32-0-123.ec2.internal",
            "private_ip": "172.32.0.123",
            "public_dns": "ec2-3-235-247-154.compute-1.amazonaws.com",
            "public_ip": "3.235.247.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00349176de06ce29c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a5c1a9c171966bc",
            "tags": {
              "Cron": "Enabled",
              "Deployment": "Enabled",
              "Name": "ghost-dev",
              "environment": "dev"
            },
            "tags_all": {
              "Cron": "Enabled",
              "Deployment": "Enabled",
              "Name": "ghost-dev",
              "environment": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d19db851bef21c0c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.app_server",
            "data.local_file.ssh_public_key",
            "module.app_server.aws_iam_instance_profile.ec2",
            "module.app_server.aws_iam_role.ec2",
            "module.app_server.aws_secretsmanager_secret.dbroot",
            "module.app_server.aws_secretsmanager_secret.dbuser",
            "module.app_server.aws_secretsmanager_secret_version.dbroot_ver",
            "module.app_server.aws_secretsmanager_secret_version.dbuser_ver",
            "module.app_server.data.aws_ami.ubuntu",
            "module.app_server.data.aws_iam_policy_document.ec2_assume_role_policy_document",
            "module.app_server.random_id.root_password",
            "module.app_server.random_id.user_password",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_eip.nat_custom",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.custom",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.default",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.default_inbound",
            "module.vpc.aws_network_acl_rule.default_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.add_private",
            "module.vpc.aws_subnet.add_public",
            "module.vpc.aws_subnet.nat_public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_nat_gateway.custom",
            "module.vpc.data.aws_subnet.add_private",
            "module.vpc.data.aws_subnet.add_public",
            "module.vpc.data.aws_subnet.nat_public",
            "module.vpc.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:internet-gateway/igw-0978d51d9eddfcdb2",
            "id": "igw-0978d51d9eddfcdb2",
            "owner_id": "238086487912",
            "tags": {
              "Application": "ghost",
              "Name": "maker-ghost-dev",
              "Team": "techops",
              "environment": "dev"
            },
            "tags_all": {
              "Application": "ghost",
              "Name": "maker-ghost-dev",
              "Team": "techops",
              "environment": "dev"
            },
            "vpc_id": "vpc-06b010bc1c902e8b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:network-acl/acl-0bf7e5ac90ebd062f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bf7e5ac90ebd062f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "238086487912",
            "subnet_ids": [
              "subnet-00a5c1a9c171966bc",
              "subnet-0412a041a403e1575"
            ],
            "tags": {
              "Application": "ghost",
              "Name": "maker-ghost-dev",
              "Team": "techops",
              "environment": "dev"
            },
            "tags_all": {
              "Application": "ghost",
              "Name": "maker-ghost-dev",
              "Team": "techops",
              "environment": "dev"
            },
            "vpc_id": "vpc-06b010bc1c902e8b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_subnet_ids.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "default_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1391763402",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bf7e5ac90ebd062f",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "default_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2618326028",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bf7e5ac90ebd062f",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_subnet_ids.default",
            "module.vpc.aws_network_acl.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0978d51d9eddfcdb2",
            "id": "r-rtb-04a7335e18122e1131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a7335e18122e113",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:route-table/rtb-04a7335e18122e113",
            "id": "rtb-04a7335e18122e113",
            "owner_id": "238086487912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0978d51d9eddfcdb2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "ghost",
              "Name": "public-rt",
              "Team": "techops",
              "environment": "dev"
            },
            "tags_all": {
              "Application": "ghost",
              "Name": "public-rt",
              "Team": "techops",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b010bc1c902e8b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094d4a294b402f156",
            "route_table_id": "rtb-04a7335e18122e113",
            "subnet_id": "subnet-00a5c1a9c171966bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0924ec7188b28c60d",
            "route_table_id": "rtb-04a7335e18122e113",
            "subnet_id": "subnet-0412a041a403e1575"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:subnet/subnet-00a5c1a9c171966bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.32.0.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a5c1a9c171966bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238086487912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "ghost",
              "Name": "maker-ghost-dev-us-east-1a-public-sn",
              "Team": "techops",
              "environment": "dev"
            },
            "tags_all": {
              "Application": "ghost",
              "Name": "maker-ghost-dev-us-east-1a-public-sn",
              "Team": "techops",
              "environment": "dev"
            },
            "vpc_id": "vpc-06b010bc1c902e8b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:subnet/subnet-0412a041a403e1575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.32.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0412a041a403e1575",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238086487912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "ghost",
              "Name": "maker-ghost-dev-us-east-1b-public-sn",
              "Team": "techops",
              "environment": "dev"
            },
            "tags_all": {
              "Application": "ghost",
              "Name": "maker-ghost-dev-us-east-1b-public-sn",
              "Team": "techops",
              "environment": "dev"
            },
            "vpc_id": "vpc-06b010bc1c902e8b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238086487912:vpc/vpc-06b010bc1c902e8b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-0eeaab33692203c5a",
            "default_route_table_id": "rtb-03c82180a53c18857",
            "default_security_group_id": "sg-00add994624751fc1",
            "dhcp_options_id": "dopt-006e2e61f55aba4b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06b010bc1c902e8b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c82180a53c18857",
            "owner_id": "238086487912",
            "tags": {
              "Application": "ghost",
              "Name": "maker-ghost-dev",
              "Team": "techops",
              "environment": "dev"
            },
            "tags_all": {
              "Application": "ghost",
              "Name": "maker-ghost-dev",
              "Team": "techops",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}